[package]
name = "koji-retriever"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "3.2.8", features = ["derive"] }
curl = { version = "0.4.43" }
assert_cmd = "2.0.8"
predicates = "2.1.5"
#hyper = { version = "0.14.19", features = ["full"] }
#hyper-tls = { version = "0.5.0" }
#futures = { vesrion = "0.3" }
#tokio = { version = "1", features = ["sync", "rt-multi-thread"] }
